@@ -1384,16 +1384,17 @@ enum class QueryType
     AccelerationStructureCurrentSize,
 };
 
+struct QueryPoolDesc
+{
+    QueryType type;
+    GfxCount count;
+
+    const char* label = nullptr;
+};
+
 class IQueryPool : public ISlangUnknown
 {
     SLANG_COM_INTERFACE(0xe4b585e4, 0x9da9, 0x479b, {0x89, 0x5c, 0x48, 0x78, 0x8e, 0xf2, 0x33, 0x65});
-
-public:
-    struct Desc
-    {
-        QueryType type;
-        GfxCount count;
-    };
 
 public:
     virtual SLANG_NO_THROW Result SLANG_MCALL getResult(GfxIndex queryIndex, GfxCount count, uint64_t* data) = 0;
@@ -2383,7 +2384,7 @@ public:
     /// Get the type of this renderer
     virtual SLANG_NO_THROW const DeviceInfo& SLANG_MCALL getDeviceInfo() const = 0;
 
-    virtual SLANG_NO_THROW Result SLANG_MCALL createQueryPool(const IQueryPool::Desc& desc, IQueryPool** outPool) = 0;
+    virtual SLANG_NO_THROW Result SLANG_MCALL createQueryPool(const QueryPoolDesc& desc, IQueryPool** outPool) = 0;
 
     virtual SLANG_NO_THROW Result SLANG_MCALL getAccelerationStructurePrebuildInfo(
         const IAccelerationStructure::BuildInputs& buildInputs,
