@@ -8,7 +8,7 @@ class QueryPoolImpl : public QueryPoolBase
 {
 public:
     std::vector<uint64_t> m_queries;
-    Result init(const IQueryPool::Desc& desc);
+    Result init(const QueryPoolDesc& desc);
     virtual SLANG_NO_THROW Result SLANG_MCALL getResult(GfxIndex queryIndex, GfxCount count, uint64_t* data) override;
 };
 
