@@ -824,7 +824,7 @@ public:
     IQueryPool* getInterface(const Guid& guid);
     virtual SLANG_NO_THROW Result SLANG_MCALL reset() override { return SLANG_OK; }
 
-    IQueryPool::Desc m_desc;
+    QueryPoolDesc m_desc;
 };
 
 enum class PipelineType
